<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <include
            android:id="@+id/emptyLayout"
            layout="@layout/layout_meal_empty"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mealList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/primary"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="75dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="3"
            tools:listitem="@layout/list_meal"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
