<resources>
    <string name="app_name">DailyDish</string>
    <string name="dialog_add_meal_name_field_hint">Title</string>
    <string name="dialog_add_meal_description_field_hint">Description</string>
    <string name="dialog_add_meal_date_field_hint">Cooked on</string>
    <string name="dialog_add_meal_button_add_text">Add</string>
    <string name="dialog_add_meal_empty_title_error">Please, enter a title</string>
    <string name="dialog_add_meal_empty_description_error">Please, enter a description</string>
    <string name="incorrect_value">Incorrect value</string>
    <string name="meal_card_delete_button">Delete</string>
    <string name="meal_card_cooked_button">Cooked today</string>
    <string name="add_meal_dialog_title">Add a new meal</string>
    <string name="what_to_cook_today">What to cook today</string>
    <string name="settings">Settings</string>
    <string name="recently_cooked">Recently cooked</string>
    <string name="intent_select_image_from_gallery">Select Image</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="login_action_bar_icon">Login</string>
    <string name="network_get_meals_success">Synced with the server</string>
    <string name="network_get_meals_error">Error while syncing with the server</string>
    <string name="network_post_meal_error">Error while adding the meal to the server</string>
    <string name="network_post_meal_success">The meal is added to the server</string>
    <string name="network_no_internet_connection">No internet connection</string>
    <string name="network_delete_meal_error">Server error while deleting the meal</string>
    <string name="network_delete_meal_success">The meal is deleted</string>
    <string name="not_auth_add_meal_error">Please, log in to add a new meal</string>
    <string name="not_auth_update_meal_image_error">Please, log in to update the meal image</string>
    <string name="network_put_meal_error">Server error while updating the meal</string>
    <string name="network_put_meal_success">The meal is updated</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="layout_empty_what_to_cook_today">No meals here?\nAdd some!</string>
    <string name="layout_empty_recently_cooked_text">No recently cooked meals here?\nAdd some or check what to cook today!</string>
    <string name="cooked_on">Cooked on: %1$s</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="pick_from_gallery">Pick from a gallery</string>
    <string name="update_picture">Update picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="notification_channel_title">Reminders</string>
    <string name="notification_title">Ready to cook %1$s?</string>
    <string name="notification_text">%1$s hasn\'t been cooked for a while. Let\'s try it today!</string>
    <string name="settings_reminder">Remind about meals</string>
    <string name="settings_reminder_summary">Checks for long not cooked meals and sends a notification to cook it</string>

    <string name="permission_explanation_camera">We need to access your camera to be able to make photos of your cooked meals.</string>
    <string name="permission_explanation_gallery">We need to access your gallery to let you pick photos of your cooked meals.</string>
</resources>
