...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/dateEditText"
            app:srcUri="@{viewModel.mainImage.uri}"
            tools:src="@drawable/meal_empty_image"
            />
        <Button
            android:id="@+id/addMealButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:onClick="@{viewModel::onAddMeal}"
...
